css/styles.css
/* General Stylings */
body {
    box-sizing: border-box;
    margin: 0;

    color: white;
    background-color: rgb(26, 24, 24);

    /*Industrial Font Stack*/
    font-family: Bahnschrift, 'DIN Alternate', 'Franklin Gothic Medium', 'Nimbus Sans Narrow', sans-serif-condensed, sans-serif;
    font-weight: normal;
}

.container {
    padding-left: 100px;
    padding-right: 100px;
}

a {
    text-decoration: none;
}

/* Intro section stylings */
.intro {
    padding: 40px 20rem;
    text-align: center;
}

#special-title {
    color: orange;
}

/* Header Stylings */
header {
    height: 10vh;

    display: flex;
    justify-content: center;
    align-items: center;

    background-color: rgb(54, 54, 54);
}

header a {
    font-size: 28px;
    font-weight: 900;

    text-decoration: none;
    color: white;
}

/*Car Card Stylings */

.car-cards {
    padding: 40px;

    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
    grid-gap: 40px;
}

.car-card-grid-item {
    height: 300px;

    display: flex;
    align-items: center;
    justify-content: center;
}

.car-card {
    width: 300px;
    height: 250px;
    border-radius: 20px;
    /*Not really needed since it is applied on hover, where it is truly needed, but just in case*/

    display: flex;
    flex-direction: column;
    align-items: center;
}

.temp-img {
    width: 300px;
    height: 200px;

    border-radius: 18px 18px 0 0;
    background-color: white;
}

.temp-img img {
    width: inherit;
    height: inherit;
}

.car-name {
    width: 300px;
    border-radius: 0 0 18px 18px;

    display: flex;
    justify-content: center;
    align-items: center;

    color: white;
    background-color: rgb(85, 80, 80);
}

.car-card:hover {
    border: orange 2px solid;
    border-radius: 20px;
}

/* Car Intro Stylings */

.car-brand-container {
    text-align: center;
    font-size: 2rem;
    padding-top: 1rem;
}

.intro-info {
    display: flex;
    padding-top: 3rem;
    gap: 50px;
    flex-wrap: wrap;
}

.intro-img-card {
    display: flex;
    flex-direction: column;
    gap: 1rem;
    background-color: lightcoral;
    padding: 5px;
}

.intro-img-card img {
    width: 50vw;
    height: auto;
}

.intro-img-attribution {
    font-size: 1.25rem;
    align-self: center
}

.car-description-container {
    border-radius: 0.4rem;
    background-color: hsla(0, 0%, 63%, 0.5);
    padding: 1rem;
}

.description-header-container {
    border-bottom: 4px solid white;
    margin-bottom: 1.5rem;
}

.car-description-container h1 {
    margin: 0px;
}

